hphp/test/zend/good/ext-spl/SplFileObject_getchildren_basic.php
<?php
$s = new SplFileObject( __FILE__ );
var_dump($s->getChildren());

?>