hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_pop_noParams.php
<?php
$ll = new SplDoublyLinkedList();
$ll->push(1);
$ll->push(2);

var_dump($ll->pop(1));
?>